# bag-address-lookup

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  check.yml  monthly-release.yml
fallback/: municipalities.json  rvig_municipalities.csv
src/: create.rs  fryslan_aliases.rs  lib.rs  logging.rs  service.rs  suggest.rs  transform.rs
src/database/: create.rs  decode.rs  encode.rs  error.rs  layout.rs  lookup.rs  mod.rs  rw.rs  util.rs  view.rs
src/parsing/: addresses.rs  localities.rs  mod.rs  municipalities.rs  municipality_relations.rs  province_suffix.rs  public_spaces.rs  rvig_municipalities.rs  xml_utils.rs
src/service/: api_docs.html  localities_list.rs  lookup.rs  mod.rs  municipalities.rs  query.rs  suggest.rs
