[package]
name = "bag_address_lookup"
version = "0.3.3"
edition = "2024"
default-run = "bag-service"
license = "MIT OR Apache-2.0"

[[bin]]
name = "bag-service"
path = "src/bin/service.rs"

[[bin]]
name = "create-db"
path = "src/bin/create_db.rs"
required-features = ["create"]

[features]
default = ["compressed_database"]
compressed_database = ["flate2"]
create = ["zip", "quick-xml"]

[dependencies]
flate2 = { version = "1.1.9", optional = true }
quick-xml = { version = "0.39.0", optional = true }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "io-util", "signal"] }
zip = { version = "7.4.0", optional = true }
