[package]
name = "bag_address_lookup"
version = "0.5.2"
edition = "2024"
default-run = "bag-service"
license = "MIT OR Apache-2.0"

[[bin]]
name = "bag-service"
path = "src/bin/service.rs"
required-features = []

[[bin]]
name = "create-db"
path = "src/bin/create_db.rs"
required-features = ["create"]

[features]
default = ["compressed_database", "cli", "webservice"]
compressed_database = ["dep:flate2"]
create = ["dep:zip", "dep:quick-xml", "dep:serde_json", "dep:rayon"]
cli = []
webservice = ["dep:tokio", "dep:serde_json"]

[dependencies]
flate2 = { version = "1.1.8", optional = true }
quick-xml = { version = "0.39.0", optional = true }
rayon = { version = "1.11.0", optional = true }
serde_json = { version = "1.0.149", optional = true }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "time"], optional = true }
zip = { version = "8.5.1", optional = true }
